--- a/app/DetailsPage/page.module.scss
+++ b/app/DetailsPage/page.module.scss
@@ -32,4 +32,25 @@
       clear: both;
     }
   }
+  .column {
+    float: left;
+    width: 45%;
+    padding: 20px;
+    height: 70px;
+    background-color: #212121;
+    margin-top: 3px;
+    border: 3px solid #212121;
+    border-radius: 20px;
+    box-shadow: inset 5px 5px 10px black, inset -5px -5px 10px #222;
+    transition: 0.5s;
+    gap: 4px;
+    font-family: var(--font-body);
+    font-size: large;
+
+    .row:after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+  }
 }
