--- a/app/txn/[txnHash]/page.module.scss
+++ b/app/txn/[txnHash]/page.module.scss
@@ -1,56 +1,51 @@
 .main {
   margin: auto;
   margin-top: 50px;
-  height: auto;
-  padding: 0px 150px 0px 150px;
+  height: 100vh;
+  width: 100%;
   gap: 12px;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  padding: 0px 250px 0px 250px;
   place-items: center;
   @media screen and (min-width: 1600px) {
-    padding: 0px 350px 0px 350px;
+    padding: 0px 150px 0px 150px;
   }
-  .column {
-    float: left;
-    width: 45%;
-    padding: 20px;
-    height: 70px;
-    background-color: #212121;
-    margin-top: 3px;
-    border: 3px solid #212121;
-    border-radius: 20px;
-    box-shadow: inset 5px 5px 10px black, inset -5px -5px 10px #222;
-    transition: 0.5s;
-    gap: 4px;
-    font-family: var(--font-body);
-    font-size: large;
+  .datadiv {
+    width: 86vw;
+    @media screen and (min-width: 1600px) {
+      padding: 0px 150px 0px 150px;
+      width: 85vw;
+    }
+    .column {
+      float: left;
+      width: 50%;
+      padding: 20px;
+      height: 70px;
+      max-height: 100px;
+      background-color: #212121;
+      margin-top: 3px;
+      border: 3px solid #212121;
+      border-radius: 20px;
+      box-shadow: inset 5px 5px 10px black, inset -5px -5px 10px #222;
+      transition: 0.5s;
+      gap: 4px;
+      font-family: var(--font-body);
+      font-size: large;
 
-    .row:after {
-      content: "";
-      display: table;
-      clear: both;
+      .row:after {
+        display: flex;
+        justify-content: space-between;
+      }
+      // .row {
+      //   display: flex;
+      //   justify-content: center;
+      // }
     }
   }
-  .column {
-    float: left;
-    width: 45%;
-    padding: 20px;
-    height: 70px;
-    background-color: #212121;
-    margin-top: 3px;
-    border: 3px solid #212121;
-    border-radius: 20px;
-    box-shadow: inset 5px 5px 10px black, inset -5px -5px 10px #222;
-    transition: 0.5s;
-    gap: 4px;
-    font-family: var(--font-body);
-    font-size: large;
-
-    .row:after {
-      content: "";
-      display: table;
-      clear: both;
+  .ShowMoreDiv {
+    .ShowMoreButto {
     }
   }
 }
